--- a/qtEx/mainwindow.ui
+++ b/qtEx/mainwindow.ui
@@ -27,7 +27,7 @@
      <string>Firmware</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_11">
+   <widget class="QPushButton" name="drawButton">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -38,6 +38,19 @@
     </property>
     <property name="text">
      <string>Draw</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="sendPktButton">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>0</y>
+      <width>99</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>SendPacket</string>
     </property>
    </widget>
   </widget>
