--- a/qtEx/mainwindow.ui
+++ b/qtEx/mainwindow.ui
@@ -53,6 +53,19 @@
      <string>SendPacket</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="sendOtherPkt">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>0</y>
+      <width>99</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Send2Packet</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
