--- a/qtEx/mainwindow.ui
+++ b/qtEx/mainwindow.ui
@@ -45,25 +45,48 @@
      <rect>
       <x>210</x>
       <y>0</y>
-      <width>99</width>
+      <width>71</width>
       <height>27</height>
      </rect>
     </property>
     <property name="text">
-     <string>SendPacket</string>
+     <string>Ping</string>
     </property>
    </widget>
    <widget class="QPushButton" name="sendOtherPkt">
     <property name="geometry">
      <rect>
-      <x>320</x>
+      <x>290</x>
       <y>0</y>
       <width>99</width>
       <height>27</height>
      </rect>
     </property>
     <property name="text">
-     <string>Send2Packet</string>
+     <string>SetD</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="Dout">
+    <property name="geometry">
+     <rect>
+      <x>410</x>
+      <y>0</y>
+      <width>113</width>
+      <height>27</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="toggleSlave">
+    <property name="geometry">
+     <rect>
+      <x>540</x>
+      <y>0</y>
+      <width>99</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>ToggleSlave</string>
     </property>
    </widget>
   </widget>
