--- a/qtEx/mainwindow.ui
+++ b/qtEx/mainwindow.ui
@@ -89,6 +89,19 @@
      <string>ToggleSlave</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="gpifButton">
+    <property name="geometry">
+     <rect>
+      <x>660</x>
+      <y>0</y>
+      <width>99</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>GPIF</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
